--- a/projet/api_bo/templates/Users/list.html.twig
+++ b/projet/api_bo/templates/Users/list.html.twig
@@ -5,63 +5,29 @@
 {% endblock %}
 
 {% block body %}
-	<style>
-		.table th, .table td {
-			vertical-align: middle;
-		}
-	</style>
-	<br/>
-	<a style="color: black; font-size: xx-large;" href="{{ app.request.headers.get('referer') }}">
-		<i class="fas fa-chevron-circle-left"></i>
-	</a>
-	<br/><br/>
-	<table class="table text-center table-hover table-responsive">
+	<table class="table text-center">
 		<thead>
-			<tr class="table-bordered">
+			<tr>
+				<th {% if users.isSorted('u.email') %} class="sorted" {% endif %} scope="col">
+					{{ knp_pagination_sortable(users, 'user.username'|trans({}, 'common'), 'u.email') }}
+				</th>
 				<th {% if users.isSorted('u.email') %} class="sorted" {% endif %} scope="col">
 					{{ knp_pagination_sortable(users, 'user.email'|trans({}, 'common'), 'u.email') }}
 				</th>
 				<th {% if users.isSorted('u.phone_number') %} class="sorted" {% endif %} scope="col">
 					{{ knp_pagination_sortable(users, 'user.phone'|trans({}, 'common'), 'u.phone_number') }}
 				</th>
-				<th {% if users.isSorted('o.id') %} class="sorted" {% endif %} scope="col">
-					{{ knp_pagination_sortable(users, 'owner.owner'|trans({}, 'common'), 'o.id') }}
-				</th>
-				<th {% if users.isSorted('s.id') %} class="sorted" {% endif %} scope="col">
-					{{ knp_pagination_sortable(users, 'syndic.syndic'|trans({}, 'common'), 's.id') }}
-				</th>
-				<th scope="col">{% trans from "common" %} building.building {% endtrans %}</th>
-				<th scope="col">{% trans from "common" %} menu.show {% endtrans %}</th>
-				<th scope="col">{% trans from "common" %} menu.edit {% endtrans %}</th>
-				<th scope="col">{% trans from "common" %} menu.remove {% endtrans %}</th>
+				<th>{% trans from "common" %} menu.show {% endtrans %}</th>
+				<th>{% trans from "common" %} menu.edit {% endtrans %}</th>
+				<th>{% trans from "common" %} menu.remove {% endtrans %}</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for user in users %}
-				<tr class="table-bordered">
+				<tr>
+					<td>{{ user.username }}</td>
 					<td>{{ user.email }}</td>
 					<td>{{ user.phoneNumber }}</td>
-					<td>
-						{% if user.owner %}
-							{{ user.owner.firstname ~ ' ' ~ user.owner.lastname }}
-						{% endif %}
-					</td>
-					<td>
-						{% if user.syndic %}
-							{{ user.syndic.name }}
-						{% endif %}
-					</td>
-					<td>
-						{% if user.syndic and user.syndic.buildings %}
-							<ul style="list-style: none;">
-								{% for building in user.syndic.buildings %}
-									<li>
-										{{ building.__toString }}
-									</li>
-								{% endfor %}
-							</ul>
-						{% endif %}
-					</td>
 					<td>
 						<a style="color: black" href="{{ path('user_show', { id: user.id }) }}">
 							<i class="fas fa-eye"></i>
