--- a/projet/api_bo/templates/base.html.twig
+++ b/projet/api_bo/templates/base.html.twig
@@ -8,6 +8,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include 'navbar.html.twig' %}
         {% include 'flash.html.twig' %}
         {% block body %}{% endblock %}
         {% block javascripts %}
