--- a/projet/api_bo/templates/Users/show.html.twig
+++ b/projet/api_bo/templates/Users/show.html.twig
@@ -5,20 +5,61 @@
 {% endblock %}
 
 {% block body %}
-	<table class="table">
-		<thead>
-			<tr>
-				<th scope="col">{% trans from "common" %} user.username {% endtrans %}</th>
-				<th scope="col">{% trans from "common" %} user.email {% endtrans %}</th>
-				<th scope="col">{% trans from "common" %} user.phone {% endtrans %}</th>
-			</tr>
-		</thead>
+	<style>
+		.table th, .table td {
+			vertical-align: middle;
+		}
+	</style>
+	<br/>
+	<a style="color: black; font-size: xx-large;" href="{{ app.request.headers.get('referer') }}">
+		<i class="fas fa-chevron-circle-left"></i>
+	</a>
+	<br/><br/>
+	<table class="table text-center table-hover table-responsive">
 		<tbody>
-			<tr>
-				<td>{{ user.username }}</td>
+			<tr class="table-bordered">
+				<th scope="col">{% trans from "common" %} user.email {% endtrans %}</th>
 				<td>{{ user.email }}</td>
+			</tr>
+			<tr class="table-bordered">
+				<th scope="col">{% trans from "common" %} user.phone {% endtrans %}</th>
 				<td>{{ user.phoneNumber }}</td>
+			</tr>
+			<tr class="table-bordered">
+				<th scope="col">{% trans from "common" %} owner.owner {% endtrans %}</th>
+				<td>
+					{% if user.owner %}
+						{{ user.owner.firstname ~ ' ' ~ user.owner.lastname }}
+					{% endif %}
+				</td>
+			</tr>
+			<tr class="table-bordered">
+				<th scope="col">{% trans from "common" %} syndic.syndic {% endtrans %}</th>
+				<td>
+					{% if user.syndic %}
+						{{ user.syndic.name }}
+					{% endif %}
+				</td>
+			</tr>
+			<tr class="table-bordered">
+				<th scope="col">{% trans from "common" %} building.building {% endtrans %}</th>
+				<td>
+					{% if user.syndic and user.syndic.buildings %}
+						<ul style="list-style: none">
+							{% for building in user.syndic.buildings %}
+								<li>
+									{{ building.__toString }}
+								</li>
+							{% endfor %}
+						</ul>
+					{% endif %}
+				</td>
 			</tr>
 		</tbody>
 	</table>
+
+	<a href="#" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">
+		<i class="fas fa-user-edit"></i>
+		{% trans from "common" %} menu.edit {% endtrans %}
+	</a>
 {% endblock %}
