--- a/projet/api_bo/templates/Authentication/login.html.twig
+++ b/projet/api_bo/templates/Authentication/login.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <form action="{{ path('bo_login') }}", method="post">
+    <form action="{{ path('bo_login') }}" method="post">
         {{ form_widget(form) }}
     </form>
 {% endblock %}
